--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
         <div class="zawartosc">
           <h3 class="tytulprojektu">Gra 3d Lasers</h3>
           <p class="opisprojektu">Gra logiczna, która polega na układaniu laserów w odpowiedni sposób</p>
-          <a href="3dLasers.zip" class="btnprojektu">Pobierz</a>
+          <a href="https://kinghat.itch.io/3dlasers" class="btnprojektu">Pobierz</a>
         </div>
       </div>
     </div>
