--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>  
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Website with projects created by Bartosz Świątecki (kinghat)">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
   <style>
     body
     {
