--- a/index.html
+++ b/index.html
@@ -1222,7 +1222,7 @@
                         <div class="elementlistykont">
                             <img src="steamlogo.png" alt="Steam">
                             <div class="kontoinfo">
-                                <span>Steam</span>
+                                <span translate="no">Steam</span>
                                 <a id="llllahwdhaw" tabindex="0" href="https://steamcommunity.com/id/kinghat111/" target="_blank">https://steamcommunity.com/id/kinghat111/</a>
                             </div>
                         </div>
@@ -1771,4 +1771,5 @@
     });
 </script>
 </body>
+
 </html>
